trunk/tests/jastadd/negative/type_errors/L4/10_RecordAccess.ob
MODULE TestModule;
	TYPE r = RECORD 
				f : INTEGER
			END;
	VAR a : r;
		b : INTEGER;
BEGIN
	a.f := b;      (* OK *)
	b := a.f;      (* OK *)
	b := a         (* NOT OK *)
END TestModule. 
